[FIX] rimosso-scrollbar-orizzontale

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ header{
 /*main centrale*/
 main{
     padding-top: 60px;
+    overflow-x: hidden;
 }
 
 .main-centrale{
